--- a/src/unnamedlibrary/unnamedMainMenu.form
+++ b/src/unnamedlibrary/unnamedMainMenu.form
@@ -349,6 +349,9 @@
                           <Color id="Hand Cursor"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManageBookActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
